# cc-template

./: Makefile.am  README  README.md  configure.ac
lib/: Makefile.am  hello.c  hello.h  hello_int.h
tools/: Makefile.am  hello-world.c
